fixes thumb alignment

--- a/client/css/main.scss
+++ b/client/css/main.scss
@@ -56,10 +56,6 @@ li.nav-link:hover {
  * light: F7E9F0
  */
 
-#t-dwn, #t-up {
-  margin-right: 5px;
-  /*width: 85px !important;*/
-}
 
 #t-dwn a, #t-up a {
   margin-right: 5px;
